2021-02-26 Jan Kotanski <jan.kotanski@desy.de>
	* add DATA_ARRAY decorder
	* tagged as 2.57.0

2021-02-23 Jan Kotanski <jan.kotanski@desy.de>
	* add support for file:/ scheme in Tango File image source
	* update h5writers
	* catching non BaseException fixed
	* tagged as 2.56.0

2021-02-17 Jan Kotanski <jan.kotanski@desy.de>
	* Ignore disabled image sources in the multi source mode
	* fix hiding the color channel widget
	* tagged as 2.55.0

2021-02-08 Jan Kotanski <jan.kotanski@desy.de>
	* add gradients from pyqtgraph 0.11.1
	* fix for removing Item Gradient, i.e. seg fault
	* tagged as 2.54.3

2021-02-01 Jan Kotanski <jan.kotanski@desy.de>
	* fix for reseting color channel names
	* tagged as 2.54.2

2021-01-28 Jan Kotanski <jan.kotanski@desy.de>
	* update h5cppwriter and h5pywriter modules
	* tagged as 2.54.1

2021-01-13 Jan Kotanski <jan.kotanski@desy.de>
	* add load_file from a memory buffer for h5cpp module which works python-pninexus v1.3.2
	* remove support for the old python-pni module
	* tagged as 2.54.0

2020-12-07 Jan Kotanski <jan.kotanski@desy.de>
	* support nexus file in the asapo image source
	* add load_file from a memory buffer for h5py module
	* add FTFile.default_field() and FTAttributeManager.names() methods
	* tagged as 2.53.0

2020-12-02 Jan Kotanski <jan.kotanski@desy.de>
	* add support for get_substream_list for ASAPO 20.09.1
	* tagged as 2.52.5

2020-12-01 Jan Kotanski <jan.kotanski@desy.de>
	* set asapo broker timeout
	* tagged as 2.52.4

2020-11-30 Jan Kotanski <jan.kotanski@desy.de>
	* fix fetching metadata from CBF files in py3
	* tagged as 2.52.3

2020-11-30 Jan Kotanski <jan.kotanski@desy.de>
	* remove printouts
	* tagged as 2.52.2

2020-11-26 Jan Kotanski <jan.kotanski@desy.de>
	* add ASAPO help
	* tagged as 2.52.1

2020-11-25 Jan Kotanski <jan.kotanski@desy.de>
	* add ASAPO image source
	* tagged as 2.52.0

2020-10-21 Jan Kotanski <jan.kotanski@desy.de>
	* change PyTango to tango
	* tagged as 2.51.0
