@@ -1,5 +1,6 @@
 2021-02-26 Jan Kotanski <jan.kotanski@desy.de>
 	* add DATA_ARRAY decorder
+	* generate images in Test image source only on connect
 	* tagged as 2.57.0
 
 2021-02-23 Jan Kotanski <jan.kotanski@desy.de>
